--- a/community.qmd
+++ b/community.qmd
@@ -103,6 +103,9 @@ How I Got Into Data Science WITHOUT a Computer Science Degree | Tips on Working 
 <div class="quarto-video ratio ratio-16x9"><iframe data-external="1" src="https://www.youtube.com/embed/zxTGyC7JqY0" title="A PL-300 training session for the Power BI Pilipinas community." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe></div>
 A PL-300 training session for the Power BI Pilipinas community.
 
+<div class="quarto-video ratio ratio-16x9"><iframe data-external="1" src="https://www.youtube.com/embed/Y-t1B2rUMc0" title="Practice answering Data Engineering general interview questions. Organized by Sandy Cabanes, Phil Gerard Soto, Ayesha Ricafort, with special guest Nina Comia." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe></div>
+Practice answering Data Engineering general interview questions. Organized by Sandy Cabanes, Phil Gerard Soto, Ayesha Ricafort, with special guest Nina Comia.
+
 ## Doc Ligot Interviews
 
 ### Kuya Dev
@@ -156,6 +159,7 @@ A PL-300 training session for the Power BI Pilipinas community.
 ### Jerel John Velarde’s Vision: Using data for enhancing democracy in AI startups.
 
 <div class="quarto-video ratio ratio-16x9"><iframe data-external="1" src="https://www.youtube.com/embed/O1JXjUYwWc8" title="Jerel John Velarde's Mission in AI Startups for Democracy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe></div>
+
 
 ## Mentoring Program 2024
 
