--- a/about.qmd
+++ b/about.qmd
@@ -1,7 +1,7 @@
 ---
 title: "About Data Engineering Pilipinas"
 description: |
-  Data Engineering Pilipinas, a vibrant PyData community in the Philippines, is dedicated to advancing data engineering knowledge and practices. Founded July 16, 2023, our community has rapidly grown, now boasting nearly 13,000 Facebook group members.
+      "Data Engineering Pilipinas, a vibrant PyData community in the Philippines, is dedicated to advancing data engineering knowledge and practices. Founded July 16, 2023, our community has rapidly grown, now boasting nearly 13,000 Facebook group members."
 ---
 
 ![](images/Picture1.png)
