--- a/community.qmd
+++ b/community.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Community Content"
 description: |
-    Explore a rich collection of community-driven content, featuring insightful videos, blogs, and articles from data engineering experts. These resources offer valuable perspectives on various aspects of data engineering and analytics.
+        "Explore a rich collection of community-driven content, featuring insightful videos, blogs, and articles from data engineering experts. These resources offer valuable perspectives on various aspects of data engineering and analytics."
 ---
 
 ## Community Content
