--- a/datasets.qmd
+++ b/datasets.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Open Data Sources"
 description: |
-    A collection of Philippine & International data sources that can be freely used for projects.
+        "A collection of Philippine & International data sources that can be freely used for projects."
 ---
 
 # Philippine Data Sources
