--- a/community.qmd
+++ b/community.qmd
@@ -106,6 +106,9 @@ A PL-300 training session for the Power BI Pilipinas community.
 <div class="quarto-video ratio ratio-16x9"><iframe data-external="1" src="https://www.youtube.com/embed/Y-t1B2rUMc0" title="Practice answering Data Engineering general interview questions. Organized by Sandy Cabanes, Phil Gerard Soto, Ayesha Ricafort, with special guest Nina Comia." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe></div>
 Practice answering Data Engineering general interview questions. Organized by Sandy Cabanes, Phil Gerard Soto, Ayesha Ricafort, with special guest Nina Comia.
 
+<div class="quarto-video ratio ratio-16x9"><iframe data-external="1" src="https://www.youtube.com/watch?v=l_MJWuIi-KU" title="A Panel Discussion for the Class of 2025 | RUG PH 126" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe></div>
+Selected panelists give advice and answer questions on how to start a career in data after graduation. We discuss skills and competencies required when starting data-related roles, including those that were gained while studying for a degree.
+
 ## Doc Ligot Interviews
 
 ### Kuya Dev
@@ -445,4 +448,3 @@ None. [Maybe in the future recognition for mentors, for mentees, the mentoring i
 **Can the mentor-mentee match be changed?**
 Yes, as long as both parties are informed.
 
->>>>>>> 38e900b8479fc2e757d5469b4df86830ee31212a
