revised datacamp link

--- a/datacamp-donates.qmd
+++ b/datacamp-donates.qmd
@@ -38,7 +38,7 @@ We’re excited to support your learning journey and can’t wait to see the inc
 
 **Start Your Application:**
 
-- [APPLY NOW](https://docs.google.com/forms/d/e/1FAIpQLSeY42PZsUjEI81_1i_P6hPWGanXW8QxMhgGg44gKsZMrZfPvA/viewform)
+- [APPLY NOW](https://forms.gle/ouM3pREAbWF8yrLo6)
 
 ---
 
