--- a/programs.qmd
+++ b/programs.qmd
@@ -9,7 +9,7 @@ description: |
 |----|----------------------------------|------------------------------------------------------|-----------------------------|
 | 1  | [DEP Website](https://dataengineering.ph/)                      | Website for Data Engineering Pilipinas               | [Myk Ogbinar](https://www.linkedin.com/in/ogbinar/)                 |
 | 2  | [Project Challenges](community.qmd#official-datacamp-donates-partner) & [Data Hub](https://github.com/dataengineeringpilipinas/datahub)              | Leading complex projects within the community        | [Josh Valdeleon](https://www.linkedin.com/in/josh-valdeleon/),  [Chris Formoso](https://www.linkedin.com/in/chris-formoso/)|
-| 3  | [Data Masters & Presenters Online](https://m.me/ch/Abb-DouVSULyIWfm/) | Organizing online presentations and webinars         | [Katherine Bulac](https://www.linkedin.com/in/katherinebulac/), [Sandy Cabanes](https://www.linkedin.com/in/sandygcabanes)               |
+| 3  | [Data Masters & Presenters Online](https://m.me/ch/Abb-DouVSULyIWfm/) | Organizing online presentations and webinars         | [Katherine Bulac](https://www.linkedin.com/in/katherinebulac/), [Kristine Cristobal](https://www.linkedin.com/in/kristine-cristobal-71507113/), [Sandy Cabanes](https://www.linkedin.com/in/sandygcabanes)               |
 | 4  | [Community Survey](https://docs.google.com/forms/d/e/1FAIpQLSeHlv5pmUZpjvHu7tquIUe6yjx2jBMCOsjcPXeQ0mnpg-i2YA/viewform)                 | Gathering feedback and insights from community members | [Sandy Cabanes](https://www.linkedin.com/in/sandygcabanes)                 |
 | 5  | [Mentorship Program](community.qmd#mentoring-program-2024)               | Connecting mentors and mentees within the community  | [Phil Gerard Soto](https://www.linkedin.com/in/philgerardsoto/)            |
 | 6  | [The Puso Project](https://www.thepusoproject.ph/)                 | Free Python Training, Projects, & Web Development | [Engramar Bollas](https://www.linkedin.com/in/engramarbollas/)             |
